# tract_querier

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  example_script.html  exclusion issue  genindex.html  index.html  installation_instructions.html  license.html  license.rst  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tract_querier.html
.github/workflows/: doc_build.yaml  test_package.yaml
_modules/: index.html
_modules/tract_querier/: query_processor.html  tract_label_indices.html  tractography.html
_sources/: example_script.rst.txt  installation_instructions.rst.txt  tract_querier.rst.txt
data/: freesurfer_queries.qry
doc/: Makefile  bnf.rst_  conf.py  conf.py.qs  example_script.rst  index.rst  installation_instructions.rst  make.bat  tract_querier.rst
doc/examples/: wmql_1_cst.qry  wmql_2_uf.qry  wmql_3_commissural.qry
doc/templates/: class.rst  module.rst
scripts/: kappa  roi_querier  sliced_probmap_viz  tq_map_image_to_tracts  tract_math  tract_outlier_rejection  tract_querier  tract_to_mask
tract_querier/: __init__.py  aabb.py  budle_outlier_treatment.py  bundle_outlier_treatment.py  fiber_label_indices.py  mori_queries.py  query_processor.py  setup.py  shell.py  tract_label_indices.py  util.py  wmql_nipype.py
tract_querier/code_util/: __init__.py  setup.py
tract_querier/data/: FreeSurfer.qry  JHU_MNI_SS_WMPM_Type-II.qry  JHU_MNI_SS_WMPM_Type_I.qry  JHU_MNI_SS_WMPM_Type_II.qry  freesurfer_queries.qry  freesurfer_queries_bsf2016.qry  freesurfer_queries_bsf2016_toad.qry  freesurfer_queries_new.qry  mori_queries.qry  mori_queries2.qry
tract_querier/nipype/: setup.py  utils.py  wmql.py
tract_querier/tensor/: __init__.py  scalar_measures.py  setup.py
tract_querier/tests/: __init__.py  datasets.py  test_scripts.py  (+7 more)
(+65 files in other folders)
