[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "tract_querier"
description = "WMQL: Query language for automatic tract extraction from full-brain tractographies with a registered template on top of them"
readme = "README.md"
license = {file = "license.rst"}
authors = [
  {name = "Demian Wassermann"}, {email = "demian.wassermann@inria.fr"}
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]
dependencies = [
    "numpy>=1.23.0,<2.0.0",
    "nibabel>=3.0.0,<4.0.0",
    "vtk>8.1.0,<=9.4.0"
]
dynamic = ["version"]
requires-python = ">=3.9,<3.12"

[project.optional-dependencies]
doc = [
    "numpydoc",
]
test = [
    "coverage",
    "pytest",
    "pytest-console-scripts",
]

[project.urls]
documentation = "http://demianw.github.io/tract_querier"
homepage = "http://demianw.github.io/tract_querier"
repository = "https://github.com/demianw/tract_querier"

[project.scripts]
tract_math = "scripts.cli_tract_math:main"
tract_querier = "scripts.cli_tract_querier:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
tract_querier = [
    "data/FreeSurfer.qry",
    "data/JHU_MNI_SS_WMPM_Type_I.qry",
    "data/JHU_MNI_SS_WMPM_Type_II.qry",
    "data/freesurfer_queries.qry",
    "data/mori_queries.qry",
]

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

[tool.setuptools_scm]
write_to = "tract_querier/_version.py"
